# uri_routes

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: lib.rs
src/resources/: Cargo.toml  LICENSE  README.md  lib.rs
src/routes/: Cargo.toml  README.md  lib.rs
