[package]
name = "routes"
description = "URI building library"
license-file = "LICENSE"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "routes"
path = "src/lib.rs"
doc  = true
crate-type = ["lib"]

[dependencies]
http = "1.1.0"
ordered-float = "4.2.0"
