[package]
name = "uri-resources"
description = "Resource URI building library"
license-file = "LICENSE"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "uri_resources"
path = "lib.rs"
doc  = true
crate-type = ["lib"]
