[package]
name = "uri-resources"
description = "Resource URI building library"
license-file = "LICENSE"
version = "0.2.4"
edition = "2021"
repository = "https://github.com/WilkinsonK/uri_routes"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "uri_resources"
path = "lib.rs"
doc  = true
crate-type = ["lib"]

[dependencies]
anyhow = "1.0.80"
thiserror = "1.0.57"
